fixed some overlap issues

--- a/src/app/app/app.component.css
+++ b/src/app/app/app.component.css
@@ -34,6 +34,7 @@ nav {
     /*width: 1000px;*/
     /*width: 100%;*/
     background: #222;
+    z-index: 200;
 }
 nav a {
     display: inline-block;
